--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -36,16 +36,16 @@
         <ch.qos.logback.version>1.2.1</ch.qos.logback.version>
         <com.auth0.jwks-rsa.version>0.3.0</com.auth0.jwks-rsa.version>
         <com.fasterxml.jackson.core.version>2.9.7</com.fasterxml.jackson.core.version>
-        <com.google.api-client.version>1.23.0</com.google.api-client.version>
-        <com.google.code.guice.version>4.1.0</com.google.code.guice.version>
-        <com.google.guava.version>20.0</com.google.guava.version>
+        <com.google.api-client.version>1.27.0</com.google.api-client.version>
+        <com.google.code.guice.version>4.2.2</com.google.code.guice.version>
+        <com.google.guava.version>27.0-jre</com.google.guava.version>
         <com.google.gwt.gin.version>2.1.2</com.google.gwt.gin.version>
         <com.google.gwt.version>2.8.2</com.google.gwt.version>
-        <com.google.http-client.version>1.23.0</com.google.http-client.version>
+        <com.google.http-client.version>1.27.0</com.google.http-client.version>
         <com.google.jsinterop.base.version>1.0.0-RC1</com.google.jsinterop.base.version>
         <com.google.jsinterop.version>1.0.2</com.google.jsinterop.version>
-        <com.google.oauth-client.version>1.23.0</com.google.oauth-client.version>
-        <com.googlecode.gson.version>2.8.2</com.googlecode.gson.version>
+        <com.google.oauth-client.version>1.27.0</com.google.oauth-client.version>
+        <com.googlecode.gson.version>2.8.5</com.googlecode.gson.version>
         <com.h2database.version>1.4.196</com.h2database.version>
         <com.jcraft.jsch.version>0.1.54</com.jcraft.jsch.version>
         <com.squareup.okhttp3.version>3.9.1</com.squareup.okhttp3.version>
@@ -82,7 +82,7 @@
         <org.apache.commons.lang3.version>3.8.1</org.apache.commons.lang3.version>
         <org.apache.lucene.version>7.4.0</org.apache.lucene.version>
         <org.apache.tika.version>1.19.1</org.apache.tika.version>
-        <org.apache.tomcat.version>8.5.35</org.apache.tomcat.version>
+        <org.apache.tomcat.version>8.5.23</org.apache.tomcat.version>
         <org.bouncycastle.version>1.60</org.bouncycastle.version>
         <org.eclipse.birt.equinox.common.version>3.6.200.v20130402-1505</org.eclipse.birt.equinox.common.version>
         <org.eclipse.core.commands.version>3.6.0</org.eclipse.core.commands.version>
@@ -353,11 +353,6 @@
             <dependency>
                 <groupId>com.google.inject.extensions</groupId>
                 <artifactId>guice-assistedinject</artifactId>
-                <version>${com.google.code.guice.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.inject.extensions</groupId>
-                <artifactId>guice-multibindings</artifactId>
                 <version>${com.google.code.guice.version}</version>
             </dependency>
             <dependency>
