--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -35,24 +35,24 @@
         <aopalliance.version>1.0</aopalliance.version>
         <ch.qos.logback.version>1.2.1</ch.qos.logback.version>
         <com.auth0.jwks-rsa.version>0.3.0</com.auth0.jwks-rsa.version>
-        <com.fasterxml.jackson.core.version>2.7.7</com.fasterxml.jackson.core.version>
-        <com.google.api-client.version>1.23.0</com.google.api-client.version>
-        <com.google.code.guice.version>4.1.0</com.google.code.guice.version>
-        <com.google.guava.version>20.0</com.google.guava.version>
+        <com.fasterxml.jackson.core.version>2.9.7</com.fasterxml.jackson.core.version>
+        <com.google.api-client.version>1.27.0</com.google.api-client.version>
+        <com.google.code.guice.version>4.2.2</com.google.code.guice.version>
+        <com.google.guava.version>27.0.1-jre</com.google.guava.version>
         <com.google.gwt.gin.version>2.1.2</com.google.gwt.gin.version>
         <com.google.gwt.version>2.8.2</com.google.gwt.version>
-        <com.google.http-client.version>1.23.0</com.google.http-client.version>
+        <com.google.http-client.version>1.27.0</com.google.http-client.version>
         <com.google.jsinterop.base.version>1.0.0-RC1</com.google.jsinterop.base.version>
         <com.google.jsinterop.version>1.0.2</com.google.jsinterop.version>
-        <com.google.oauth-client.version>1.23.0</com.google.oauth-client.version>
-        <com.googlecode.gson.version>2.8.2</com.googlecode.gson.version>
+        <com.google.oauth-client.version>1.27.0</com.google.oauth-client.version>
+        <com.googlecode.gson.version>2.8.5</com.googlecode.gson.version>
         <com.h2database.version>1.4.196</com.h2database.version>
-        <com.jcraft.jsch.version>0.1.53</com.jcraft.jsch.version>
+        <com.jcraft.jsch.version>0.1.54</com.jcraft.jsch.version>
         <com.squareup.okhttp3.version>3.9.1</com.squareup.okhttp3.version>
-        <commons-codec.version>1.10</commons-codec.version>
-        <commons-compress.version>1.9</commons-compress.version>
+        <commons-codec.version>1.11</commons-codec.version>
+        <commons-compress.version>1.18</commons-compress.version>
         <commons-fileupload.version>1.3.3</commons-fileupload.version>
-        <commons-io.version>2.4</commons-io.version>
+        <commons-io.version>2.6</commons-io.version>
         <commons-lang.version>2.6</commons-lang.version>
         <io.fabric8.kubernetes-client>4.1.0</io.fabric8.kubernetes-client>
         <io.fabric8.kubernetes-model>${io.fabric8.kubernetes-client}</io.fabric8.kubernetes-model>
@@ -85,11 +85,11 @@
         <net.java.dev.jna.version>4.1.0</net.java.dev.jna.version>
         <org.antlr.st4.version>4.0.7</org.antlr.st4.version>
         <org.antlr.version>3.5.2</org.antlr.version>
-        <org.apache.commons.lang3.version>3.4</org.apache.commons.lang3.version>
-        <org.apache.lucene.version>7.0.1</org.apache.lucene.version>
-        <org.apache.tika.version>1.11</org.apache.tika.version>
+        <org.apache.commons.lang3.version>3.8.1</org.apache.commons.lang3.version>
+        <org.apache.lucene.version>7.4.0</org.apache.lucene.version>
+        <org.apache.tika.version>1.19.1</org.apache.tika.version>
         <org.apache.tomcat.version>8.5.23</org.apache.tomcat.version>
-        <org.bouncycastle.version>1.51</org.bouncycastle.version>
+        <org.bouncycastle.version>1.60</org.bouncycastle.version>
         <org.eclipse.birt.equinox.common.version>3.6.200.v20130402-1505</org.eclipse.birt.equinox.common.version>
         <org.eclipse.core.commands.version>3.6.0</org.eclipse.core.commands.version>
         <org.eclipse.core.contenttype.version>3.4.200-v20140207-1251</org.eclipse.core.contenttype.version>
@@ -122,7 +122,7 @@
         <org.seleniumhq.selenium.version>3.0.1</org.seleniumhq.selenium.version>
         <org.slf4j.version>1.7.24</org.slf4j.version>
         <org.vectomatic.lib-gwt-svg.version>0.5.12</org.vectomatic.lib-gwt-svg.version>
-        <org.yaml.snakeyaml.version>1.14</org.yaml.snakeyaml.version>
+        <org.yaml.snakeyaml.version>1.15</org.yaml.snakeyaml.version>
         <requirejs.upstream.version>2.1.15</requirejs.upstream.version>
         <?SORTPOM IGNORE?>
         <!-- compile time dependencies-->
@@ -207,12 +207,6 @@
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
                 <artifactId>jackson-dataformat-yaml</artifactId>
                 <version>${com.fasterxml.jackson.core.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <artifactId>snakeyaml</artifactId>
-                        <groupId>org.yaml</groupId>
-                    </exclusion>
-                </exclusions>
             </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
@@ -382,11 +376,6 @@
             <dependency>
                 <groupId>com.google.inject.extensions</groupId>
                 <artifactId>guice-assistedinject</artifactId>
-                <version>${com.google.code.guice.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.inject.extensions</groupId>
-                <artifactId>guice-multibindings</artifactId>
                 <version>${com.google.code.guice.version}</version>
             </dependency>
             <dependency>
