--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -57,6 +57,7 @@
         <io.fabric8.kubernetes-client>4.1.0</io.fabric8.kubernetes-client>
         <io.fabric8.kubernetes-model>${io.fabric8.kubernetes-client}</io.fabric8.kubernetes-model>
         <io.fabric8.openshift-client.version>${io.fabric8.kubernetes-client}</io.fabric8.openshift-client.version>
+        <io.github.mweirauc.micrometer-jvm-extras.version>0.1.3</io.github.mweirauc.micrometer-jvm-extras.version>
         <io.jaegertracing.version>0.32.0</io.jaegertracing.version>
         <io.micrometer.version>1.1.0</io.micrometer.version>
         <io.opentracing.concurrent.version>0.2.0</io.opentracing.concurrent.version>
@@ -503,6 +504,11 @@
                 <groupId>io.fabric8</groupId>
                 <artifactId>openshift-client</artifactId>
                 <version>${io.fabric8.openshift-client.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.mweirauch</groupId>
+                <artifactId>micrometer-jvm-extras</artifactId>
+                <version>${io.github.mweirauc.micrometer-jvm-extras.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.jaegertracing</groupId>
