--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -561,6 +561,11 @@
             </dependency>
             <dependency>
                 <groupId>io.opentracing</groupId>
+                <artifactId>opentracing-noop</artifactId>
+                <version>${io.opentracing.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.opentracing</groupId>
                 <artifactId>opentracing-util</artifactId>
                 <version>${io.opentracing.version}</version>
             </dependency>
