--- a/dependencies/pom.xml
+++ b/dependencies/pom.xml
@@ -142,7 +142,7 @@
         <org.codehaus.plexus.utils.version>3.0.20</org.codehaus.plexus.utils.version>
         <org.eclipse.sisu.version>0.3.0</org.eclipse.sisu.version>
         <org.apache.maven.wagon.version>2.9</org.apache.maven.wagon.version>
-        <org.ow2.asm.version>5.2</org.ow2.asm.version>
+        <org.ow2.asm.version>7.0</org.ow2.asm.version>
 
         <!-- test only dependencies-->
         <com.jayway.restassured.version>2.4.0</com.jayway.restassured.version>
@@ -726,6 +726,11 @@
                 <groupId>javax.inject</groupId>
                 <artifactId>javax.inject</artifactId>
                 <version>${javax.inject.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.json</groupId>
+                <artifactId>javax.json-api</artifactId>
+                <version>${javax.json.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.mail</groupId>
